[package]

name = "cesu8"
version = "0.0.7"
authors = ["Eric Kidd <git@randomhacks.net>"]

description = "Convert to and from CESU-8 encoding (similar to UTF-8)"
license = "Apache-2.0/MIT"
readme = "README.md"

repository = "https://github.com/emk/cesu8-rs"
documentation = "http://www.rust-ci.org/emk/cesu8-rs/doc/cesu8/"
